# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  README.md  codebase-info.md  format.sh  pyproject.toml  quality-check.sh
backend/: .coverage  ai_generator.py  app.py  config.py  search_tools.py  session_manager.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
